# Microservice.Order

./: .pre-commit-config.yaml  README.md  alembic.ini  config.py  pyproject.toml  ruff.toml
common/: config.py  producer.py
common/logger/: impl.py
main-deploy/: docker-compose-kafka.yaml  docker-compose-orders.yaml  docker-compose-payments.yaml  docker-compose-stocks.yaml  init-topics.sh  install.sh
microservice_order/src/: main.py
microservice_order/src/domain/: aggregates.py  entities.py
microservice_order/src/infrastructure/: session.py
orders-deploy/: docker-compose.yaml
src/: __init__.py  config.py  main.py
src/application/: disp_depends.py  dispatcher.py
src/application/handlers/: handle_cancel_order.py  handle_create_order.py
src/application/ports/: broker.py  logger.py  repositories.py  services.py  uow.py
src/application/sagas/: create_order_saga.py
src/application/use_cases/: cancel_order.py  create_order.py  get_products.py
src/domain/: aggregates.py  base.py  commands.py  entities.py  enums.py  events.py  exceptions.py  mappers.py
src/infrastructure/: exceptions.py  models.py  session.py
src/infrastructure/logger/: impl.py  interfaces.py
src/infrastructure/messaging/: consumer.py  interfaces.py  kafka_router.py  messages.py  producer.py
src/infrastructure/migrations/: env.py
src/infrastructure/repositories/: base_repository.py  create_order_saga_repository.py  create_order_saga_step_repository.py  interfaces.py  order_event_repository.py  (+4 more)
src/presentation/: exception_handler.py  exception_mapper.py  schemas.py
(+31 files in other folders)
